hphp/test/zend/bad/tests/output/ob_010.php
<?php
function obh($s)
{
	print_r($s, 1);
}
ob_start("obh");
echo "foo\n";
?>